manifestos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentiment-service
spec:
  selector:
    app: sentiment-app
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
